--- a/site/src/examples/carousel/index.module.css
+++ b/site/src/examples/carousel/index.module.css
@@ -1,7 +1,6 @@
 .carousel {
   --salt-text-h1-fontSize: 60px;
-  max-width: 600px;
-  width: 80vw;
+  width: 80%;
 }
 
 .carouselImage {
@@ -13,13 +12,13 @@
 .carouselSlide {
   box-sizing: border-box;
   transform: translate3d(0, 0, 0);
-  flex: 0 0 var(--salt-slide-size);
+  flex: 0 0 var(--saltCarousel-slide-size);
   min-width: 0;
-  padding-left: var(--salt-slide-spacing);
+  padding-left: var(--saltCarousel-slide-spacing);
 }
 
 .carouselMultipleSlides {
-  --salt-slide-size: 50%;
+  --saltCarousel-slide-size: 50%;
 }
 
 .carouselNumber {
@@ -28,6 +27,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: var(--salt-slide-height);
+  height: var(--saltCarousel-slide-height);
   user-select: none;
 }
